Added quick search for advanced settings. GZIP resources moved to .rc2.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9534 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-af.xml
+++ b/Languages/default-af.xml
@@ -3808,7 +3808,9 @@
 			<control caption="_Verstel..."/>
 			<control caption="Kry meer"/>
 		</dialog>
-		<dialog name="CAdvancedSettingsPage" cookie="SyEdmsBuBuStStEdBuCo" caption="Gevorderd">
+		<dialog name="CAdvancedSettingsPage" cookie="EdStSyEdmsBuBuStStEdBuCo" caption="Gevorderd">
+			<control/>
+			<control/>
 			<control/>
 			<control/>
 			<control/>
