--- a/Languages/default-es.xml
+++ b/Languages/default-es.xml
@@ -3804,7 +3804,9 @@ puede comenzar a transferir en cualquier momento.</text>
 			<control caption="_Configurar..."/>
 			<control caption="Buscar más..."/>
 		</dialog>
-		<dialog name="CAdvancedSettingsPage" cookie="SyEdmsBuBuStStEdBuCo" caption="Avanzado">
+		<dialog name="CAdvancedSettingsPage" cookie="EdStSyEdmsBuBuStStEdBuCo" caption="Avanzado">
+			<control/>
+			<control/>
 			<control/>
 			<control/>
 			<control/>
