--- a/Languages/default-sr.xml
+++ b/Languages/default-sr.xml
@@ -3808,7 +3808,9 @@
 			<control caption="_Podesi..."/>
 			<control caption="Stavi Više"/>
 		</dialog>
-		<dialog name="CAdvancedSettingsPage" cookie="SyEdmsBuBuStStEdBuCo" caption="Napredno">
+		<dialog name="CAdvancedSettingsPage" cookie="EdStSyEdmsBuBuStStEdBuCo" caption="Napredno">
+			<control/>
+			<control/>
 			<control/>
 			<control/>
 			<control/>
