--- a/Languages/default-ca.xml
+++ b/Languages/default-ca.xml
@@ -3808,7 +3808,9 @@
 			<control caption="_Configura..."/>
 			<control caption="Obtén més..."/>
 		</dialog>
-		<dialog name="CAdvancedSettingsPage" cookie="SyEdmsBuBuStStEdBuCo" caption="Avançat">
+		<dialog name="CAdvancedSettingsPage" cookie="EdStSyEdmsBuBuStStEdBuCo" caption="Avançat">
+			<control/>
+			<control/>
 			<control/>
 			<control/>
 			<control/>
