--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -3823,7 +3823,9 @@
 			<control caption="_Setup..."/>
 			<control caption="Get More"/>
 		</dialog>
-		<dialog name="CAdvancedSettingsPage" cookie="SyEdmsBuBuStStEdBuCo" caption="Advanced">
+		<dialog name="CAdvancedSettingsPage" cookie="EdStSyEdmsBuBuStStEdBuCo" caption="Advanced">
+			<control/>
+			<control/>
 			<control/>
 			<control/>
 			<control/>
