--- a/Languages/default-hr.xml
+++ b/Languages/default-hr.xml
@@ -3809,7 +3809,9 @@
 			<control caption="_Naštimaj..."/>
 			<control caption="Stavi Više"/>
 		</dialog>
-		<dialog name="CAdvancedSettingsPage" cookie="SyEdmsBuBuStStEdBuCo" caption="Napredno">
+		<dialog name="CAdvancedSettingsPage" cookie="EdStSyEdmsBuBuStStEdBuCo" caption="Napredno">
+			<control/>
+			<control/>
 			<control/>
 			<control/>
 			<control/>
