--- a/Languages/default-it.xml
+++ b/Languages/default-it.xml
@@ -3808,7 +3808,9 @@
 			<control caption="_Installa..."/>
 			<control caption="Altre skin"/>
 		</dialog>
-		<dialog name="CAdvancedSettingsPage" cookie="SyEdmsBuBuStStEdBuCo" caption="Avanzato">
+		<dialog name="CAdvancedSettingsPage" cookie="EdStSyEdmsBuBuStStEdBuCo" caption="Avanzato">
+			<control/>
+			<control/>
 			<control/>
 			<control/>
 			<control/>
