--- a/Languages/default-no.xml
+++ b/Languages/default-no.xml
@@ -3808,7 +3808,9 @@
 			<control caption="_Innstaller..."/>
 			<control caption="Finn flere..."/>
 		</dialog>
-		<dialog name="CAdvancedSettingsPage" cookie="SyEdmsBuBuStStEdBuCo" caption="Avansert">
+		<dialog name="CAdvancedSettingsPage" cookie="EdStSyEdmsBuBuStStEdBuCo" caption="Avansert">
+			<control/>
+			<control/>
 			<control/>
 			<control/>
 			<control/>
