Fixed last fuzzy bug. Bumped SkinTranslate version up to 1.0.0.4.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9539 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-pl.xml
+++ b/Languages/default-pl.xml
@@ -4719,7 +4719,7 @@
 		<list name="CSchedulerWnd">
 			<column from="Action" to="Akcja"/>
 			<column from="Trigger" to="TigerTree"/>
-			<column from="Next Run" to="NextRun"/>
+			<column from="Next Run" to="Następny"/>
 			<column from="Active" to="Aktywne"/>
 			<column from="Status" to="Status"/>
 			<column from="Description" to="Opis"/>
