Added a DC++ hub list URL as a full fledged discovery services (renamed "Discovery.UpdatePeriod" option to "Discovery.AccessPeriod"; renamed "eDonkey.MetAutoQuery" option to "eDonkey.AutoDiscovery"; added new option "DC.AutoDiscovery"; updated translations).
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9544 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-ar.po
+++ b/Languages/default-ar.po
@@ -8999,8 +8999,8 @@ msgid "Discovery Service Type:"
 msgstr ": نوع خدمة الإكتشاف"
 
 #: cdiscoveryservicedlg;control;4
-msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"
-msgstr "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met| رابطالمحجوبة"
+msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blocked"
+msgstr "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met|DC++ Hub List URL| رابطالمحجوبة"
 
 #: dialog;cdownloadmonitordlg
 msgid "Download : Shareaza"
