--- a/Languages/default-ee.xml
+++ b/Languages/default-ee.xml
@@ -4114,7 +4114,7 @@
 			<control caption="Teenuse _Aadress:"/>
 			<control/>
 			<control caption="Teenuse Tüüp:"/>
-			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"/>
+			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blocked"/>
 			<control caption="OK"/>
 			<control caption="Tühista"/>
 		</dialog>
