--- a/Languages/default-es-mx.po
+++ b/Languages/default-es-mx.po
@@ -8987,8 +8987,8 @@ msgid "Discovery Service Type:"
 msgstr "Tipo de servicio de descubrimiento:"
 
 #: cdiscoveryservicedlg;control;4
-msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"
-msgstr "Gnutella Bootstrap|GWebCache|Server.met URL|Bloqueado"
+msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blocked"
+msgstr "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Bloqueado"
 
 #: dialog;cdownloadmonitordlg
 msgid "Download : Shareaza"
