--- a/Languages/default-gr.po
+++ b/Languages/default-gr.po
@@ -9002,8 +9002,8 @@ msgid "Discovery Service Type:"
 msgstr "Τύπος Υπηρεσίας:"
 
 #: cdiscoveryservicedlg;control;4
-msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"
-msgstr "Gnutella Bootstrap|GWebCache|Server.met URL|Φραγμένη"
+msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blocked"
+msgstr "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Φραγμένη"
 
 #: dialog;cdownloadmonitordlg
 msgid "Download : Shareaza"
