--- a/Languages/default-hu.xml
+++ b/Languages/default-hu.xml
@@ -4113,7 +4113,7 @@
 			<control caption="Szolgáltatás _címe"/>
 			<control/>
 			<control caption="Típusa:"/>
-			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"/>
+			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blokkolva"/>
 			<control caption="OK"/>
 			<control caption="Mégse"/>
 		</dialog>
