--- a/Languages/default-pl.po
+++ b/Languages/default-pl.po
@@ -8908,8 +8908,8 @@ msgid "Discovery Service Type:"
 msgstr "Typ serwisu Discovery:"
 
 #: cdiscoveryservicedlg;control;4
-msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"
-msgstr "Gnutella Bootstrap|GWebCache|Server.met URL|Zablokowany"
+msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blocked"
+msgstr "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Zablokowany"
 
 #: dialog;cdownloadmonitordlg
 msgid "Download : Shareaza"
