--- a/Languages/default-sq.xml
+++ b/Languages/default-sq.xml
@@ -4113,7 +4113,7 @@
 			<control caption="_Adresa e Shërbimit:"/>
 			<control/>
 			<control caption="Lloji i Shërbimit të Zbulimit:"/>
-			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|URL e Server.met|Bllokuar"/>
+			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|URL e Server.met|DC++ Hub List URL|Bllokuar"/>
 			<control caption="OK"/>
 			<control caption="Anulo"/>
 		</dialog>
