--- a/Languages/default-tr.po
+++ b/Languages/default-tr.po
@@ -8892,8 +8892,8 @@ msgid "Discovery Service Type:"
 msgstr "Keşif Servis Türü:"
 
 #: cdiscoveryservicedlg;control;4
-msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"
-msgstr "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Engellenmiş"
+msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blocked"
+msgstr "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Engellenmiş"
 
 #: dialog;cdownloadmonitordlg
 msgid "Download : Shareaza"
