--- a/Languages/default-af.xml
+++ b/Languages/default-af.xml
@@ -4113,7 +4113,7 @@
 			<control caption="Diens _Adres:"/>
 			<control/>
 			<control caption="Ontdekkingsdiens Tipe:"/>
-			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"/>
+			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blocked"/>
 			<control caption="OK"/>
 			<control caption="Kanselleer"/>
 		</dialog>
