--- a/Languages/default-ca.xml
+++ b/Languages/default-ca.xml
@@ -4113,7 +4113,7 @@
 			<control caption="Adreça _del servei:"/>
 			<control/>
 			<control caption="Tipus de servei de descobriment:"/>
-			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"/>
+			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blocked"/>
 			<control caption="Accepta"/>
 			<control caption="Cancel·la"/>
 		</dialog>
