--- a/Languages/default-chs.po
+++ b/Languages/default-chs.po
@@ -8885,8 +8885,8 @@ msgid "Discovery Service Type:"
 msgstr "探索服务类型:"
 
 #: cdiscoveryservicedlg;control;4
-msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"
-msgstr "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met 链接|阻挡"
+msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blocked"
+msgstr "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met 链接|DC++ Hub List URL|阻挡"
 
 #: dialog;cdownloadmonitordlg
 msgid "Download : Shareaza"
