--- a/Languages/default-de.po
+++ b/Languages/default-de.po
@@ -8899,8 +8899,8 @@ msgid "Discovery Service Type:"
 msgstr "Service Typ:"
 
 #: cdiscoveryservicedlg;control;4
-msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"
-msgstr "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met-URL|Blockiert"
+msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blocked"
+msgstr "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met-URL|DC++ Hub List URL|Blockiert"
 
 #: dialog;cdownloadmonitordlg
 msgid "Download : Shareaza"
