--- a/Languages/default-gr.xml
+++ b/Languages/default-gr.xml
@@ -4113,7 +4113,7 @@
 			<control caption="_Διεύθυνση Υπηρεσίας:"/>
 			<control/>
 			<control caption="Τύπος Υπηρεσίας:"/>
-			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"/>
+			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Φραγμένη"/>
 			<control caption="OK"/>
 			<control caption="Άκυρο"/>
 		</dialog>
