--- a/Languages/default-hu.po
+++ b/Languages/default-hu.po
@@ -8963,8 +8963,8 @@ msgid "Discovery Service Type:"
 msgstr "Típusa:"
 
 #: cdiscoveryservicedlg;control;4
-msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"
-msgstr "Gnutella Bootstrap|GWebCache|Server.met URL|Blokkolva"
+msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blocked"
+msgstr "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blokkolva"
 
 #: dialog;cdownloadmonitordlg
 msgid "Download : Shareaza"
