--- a/Languages/default-it.po
+++ b/Languages/default-it.po
@@ -9002,8 +9002,8 @@ msgid "Discovery Service Type:"
 msgstr "Tipo servizio di ricerca:"
 
 #: cdiscoveryservicedlg;control;4
-msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"
-msgstr "Gnutella Bootstrap|GWebCache|URL server.met|Bloccato"
+msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blocked"
+msgstr "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Bloccato"
 
 #: dialog;cdownloadmonitordlg
 msgid "Download : Shareaza"
