--- a/Languages/default-it.xml
+++ b/Languages/default-it.xml
@@ -4113,7 +4113,7 @@
 			<control caption="_Indirizzo servizio:"/>
 			<control/>
 			<control caption="Tipo servizio di ricerca:"/>
-			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"/>
+			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Bloccato"/>
 			<control caption="OK"/>
 			<control caption="Annulla"/>
 		</dialog>
