--- a/Languages/default-ja.po
+++ b/Languages/default-ja.po
@@ -8990,8 +8990,8 @@ msgid "Discovery Service Type:"
 msgstr "ディスカバリサービス種類:"
 
 #: cdiscoveryservicedlg;control;4
-msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"
-msgstr "Gnutellaブートストラップ|GWebCache|Server.met URL|ブロック"
+msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blocked"
+msgstr "Gnutellaブートストラップ|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|ブロック"
 
 #: dialog;cdownloadmonitordlg
 msgid "Download : Shareaza"
