--- a/Languages/default-ja.xml
+++ b/Languages/default-ja.xml
@@ -4114,7 +4114,7 @@
 			<control caption="サービスのアドレス(_A):"/>
 			<control/>
 			<control caption="ディスカバリサービス種類:"/>
-			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"/>
+			<control caption="Gnutellaブートストラップ|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|ブロック"/>
 			<control caption="OK"/>
 			<control caption="キャンセル"/>
 		</dialog>
