--- a/Languages/default-lt.po
+++ b/Languages/default-lt.po
@@ -8994,8 +8994,8 @@ msgid "Discovery Service Type:"
 msgstr "Tarnybos tipas:"
 
 #: cdiscoveryservicedlg;control;4
-msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"
-msgstr "Gnutella Bootstrap|GWebCache|Server.met nuoroda|Blokuota"
+msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blocked"
+msgstr "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blokuota"
 
 #: dialog;cdownloadmonitordlg
 msgid "Download : Shareaza"
