--- a/Languages/default-nl.xml
+++ b/Languages/default-nl.xml
@@ -4109,7 +4109,7 @@
 			<control caption="Service _adres:"/>
 			<control/>
 			<control caption="Discovery service type:"/>
-			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"/>
+			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blocked"/>
 			<control caption="OK"/>
 			<control caption="Annuleren"/>
 		</dialog>
