--- a/Languages/default-no.xml
+++ b/Languages/default-no.xml
@@ -4113,7 +4113,7 @@
 			<control caption="Tjenesteadresse:"/>
 			<control/>
 			<control caption="Oppdagelsestjeneste-type:"/>
-			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"/>
+			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blocked"/>
 			<control caption="OK"/>
 			<control caption="Avbryt"/>
 		</dialog>
