--- a/Languages/default-sq.po
+++ b/Languages/default-sq.po
@@ -9004,8 +9004,8 @@ msgid "Discovery Service Type:"
 msgstr "Lloji i Shërbimit të Zbulimit:"
 
 #: cdiscoveryservicedlg;control;4
-msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"
-msgstr "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|URL e Server.met|Bllokuar"
+msgid "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blocked"
+msgstr "Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|URL e Server.met|DC++ Hub List URL|Bllokuar"
 
 #: dialog;cdownloadmonitordlg
 msgid "Download : Shareaza"
