--- a/Languages/default-sv.xml
+++ b/Languages/default-sv.xml
@@ -4113,7 +4113,7 @@
 			<control caption="Tjänst_adress:"/>
 			<control/>
 			<control caption="Typ av upptäckstjänst:"/>
-			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|Blocked"/>
+			<control caption="Gnutella Bootstrap|G1 GWebCache|G2 GWebCache|G1/G2 GWebCache|Server.met URL|DC++ Hub List URL|Blocked"/>
 			<control caption="OK"/>
 			<control caption="Avbryt"/>
 		</dialog>
