--- a/shareaza/dht/CHANGES
+++ b/shareaza/dht/CHANGES
@@ -1,3 +1,16 @@
+18 May 2015: dht-0.24
+
+  * Fixed off-by-one error that dropped find_nodes responses with exactly
+    16 nodes.  While forbidden by BEP-5, this is apparently what the good
+    folks at BitTorrent are doing.  Thanks to Tomas Brod.
+
+15 May 2015: dht-0.23
+
+  * Changed the limit on the number of nodes in replies to 16.  Thanks to
+    Tomas Brod.
+  * Fixed a memory leak when initialisation fails.  Thanks to 3null.
+  * Fixed a Y2038 issue.  Thanks to Gwiz65.
+
 3 May 2014: dht-0.22
 
   * INCOMPATIBLE CHANGE: the callback now takes const arguments.
