--- a/MiniUPnPc/miniupnpc/Changelog.txt
+++ b/MiniUPnPc/miniupnpc/Changelog.txt
@@ -1,5 +1,21 @@
-$Id: Changelog.txt,v 1.216 2015/10/08 16:15:45 nanard Exp $
+$Id: Changelog.txt,v 1.222 2016/01/24 17:24:35 nanard Exp $
 miniUPnP client Changelog.
+
+2016/01/24:
+  change miniwget to return HTTP status code
+  increments API_VERSION to 16
+
+2016/01/22:
+  Improve UPNPIGD_IsConnected() to check if WAN address is not private.
+  parse HTTP response status line in miniwget.c
+
+2015/10/26:
+  snprintf() overflow check. check overflow in simpleUPnPcommand2()
+
+2015/10/25:
+  fix compilation with old macs
+  fix compilation with mingw32 (for Appveyor)
+  fix python module for python <= 2.3
 
 2015/10/08:
   Change sameport to localport
